--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,14 +11,8 @@ jobs:
   build_and_test:
     name: Rust project - latest
     runs-on: ubuntu-latest
-    # strategy:
-    #   matrix:
-    #     toolchain:
-    #       - stable
-    #       - beta
-    #       - nightly
     steps:
       - uses: actions/checkout@v4
-      - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+      - run: rustup update
       - run: cargo build --verbose
       - run: cargo test --verbose
